compiler/src/snapshots/arachne_compiler__compiler__tests__r#let__compile_invalid-2.snap
---
source: compiler/src/compiler.rs
expression: "compile_error([[\"let\".into(), \"x\".into(), \"y\".into(),\n                            \"z\".into()].into()]).await"
---
invalid syntax: (let x y z)
