compiler/src/snapshots/arachne_compiler__compiler__tests__r#let__compile_invalid.snap
---
source: compiler/src/compiler.rs
expression: "compile_error([[\"let\".into(), \"x\".into()].into()]).await"
---
invalid syntax: (let x)
