compiler/src/snapshots/arachne_compiler__compiler__tests__r#let__compile_let.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 42.0.into()].into()]).await"
---
float64 42

