compiler/src/snapshots/arachne_compiler__compiler__tests__r#let__compile_three_let.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 42.0.into()].into(),\n                [\"let\".into(), \"y\".into(), \"x\".into()].into(),\n                [\"let\".into(), \"z\".into(), \"y\".into()].into()]).await"
---
float64 42
peek 0
peek 0

