compiler/src/snapshots/arachne_compiler__compiler__tests__r#let__compile_three_let_referencing_old.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 1.0.into()].into(),\n                [\"let\".into(), \"y\".into(), 2.0.into()].into(),\n                [\"let\".into(), \"z\".into(), \"x\".into()].into()]).await"
---
float64 1
float64 2
peek 1

