compiler/src/snapshots/arachne_compiler__compiler__tests__r#let__compile_two_let_with_same_name.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 42.0.into()].into(),\n                [\"let\".into(), \"x\".into(), 2045.0.into()].into(),\n                [\"let\".into(), \"y\".into(), \"x\".into()].into()]).await"
---
[
    Float64(
        42.0,
    ),
    Float64(
        2045.0,
    ),
    Local(
        0,
    ),
]
